--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <div class="container">
         <h2>Repo Links</h2>
-        <a href="..\Rdr2CrackedMap\index.html" class="repo-link" target="_blank">Rdr2 Cracked Map</a>
+        <a href="..\Rdr2CrackedMap\index.html" class="repo-link" target="_self">Rdr2 Cracked Map</a>
     </div>
 
     <footer>
